# dwca-parquet

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
nginx/: Dockerfile  default-nginx.conf
src/dwca_parquet/: dependencies.py  main.py  settings.py
src/dwca_parquet/libs/: csw.py  dwca.py  geoapi.py  ipt.py  parquet.py
src/dwca_parquet/routers/: resources.py
src/dwca_parquet/templates/: query.sql
