[project]
name = "dwca-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Niccolo Cantu", email = "niccolo.cantu@nina.no" }]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb==1.2.1",
    "fastapi[standard]>=0.115.12",
    "fsspec>=2025.3.2",
    "jinja2>=3.1.6",
    "lxml>=5.3.2",
    "pydantic-settings>=2.8.1",
    "xmltodict>=0.14.2",
]

[project.scripts]
dwca-parquet = "dwca_parquet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
